terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/ingress_allow_duplicate_hostname/deny_clash/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-2
  namespace: default-2
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    external-dns.alpha.kubernetes.io/set-identifier: ing-2-default-blue
spec:
  rules:
  - host: ing-1.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
